@@ -335,6 +335,7 @@ rank-bonus-unique-2=There is a __1__% chance that a hex core gets an extra trade
 rank-bonus-unique-3=This item now shows up in [color=cyan]interplanetary trades[.color] on all planets.
 rank-bonus-unique-4=Any trade with this item that would be lost from a deleted hex core is instead copied over to a random claimed hex core with the fewest existing trades.
 rank-bonus-unique-5=This item is now exchangeable at the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font].
+open-in-factoriopedia=Open in Factoriopedia.
 selling-info=Selling counts even if no coins are involved.
 buying-info=Buying counts even if no coins are involved.
 higher-qualities-count=Higher qualities count.
